Fixed overflow for landing page | Mobile

--- a/src/routes/phone-pages/Landing.css
+++ b/src/routes/phone-pages/Landing.css
@@ -27,6 +27,11 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+body{
+    min-width: 250px;
+    overflow-x: hidden;
+}
+
 
 
 .for-logo{
